chanapi-macros/tests/ui/fail_supertrait.stderr
error: chanapi::service: supertraits are not supported
 --> tests/ui/fail_supertrait.rs:2:23
  |
2 | pub trait FooService: Send {
  |                       ^^^^
