chanapi-macros/tests/ui/fail_supertrait.rs
#[chanapi::service]
pub trait FooService: Send {
    fn bar(&self);
}

fn main() {}
